--- a/WooCommerce/Classes/ViewRelated/Notifications/Cells/NoteDetailsCommentTableViewCell.xib
+++ b/WooCommerce/Classes/ViewRelated/Notifications/Cells/NoteDetailsCommentTableViewCell.xib
@@ -48,88 +48,100 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="749" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6d4-9R-dcK">
-                        <rect key="frame" x="72" y="42.5" width="47" height="12.5"/>
+                        <rect key="frame" x="72" y="42.5" width="47" height="16"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" editable="NO" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FpQ-yp-a6e">
-                        <rect key="frame" x="16" y="69" width="288" height="82"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="28" id="mhf-tZ-eCY"/>
-                        </constraints>
-                        <string key="text">1
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="eLm-pe-Z50">
+                        <rect key="frame" x="16" y="72.5" width="288" height="156"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Iy-55-tos">
+                                <rect key="frame" x="0.0" y="0.0" width="288" height="18"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="18" id="qAn-B5-boc"/>
+                                </constraints>
+                            </view>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" editable="NO" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FpQ-yp-a6e">
+                                <rect key="frame" x="0.0" y="20" width="288" height="82"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="28" id="mhf-tZ-eCY"/>
+                                </constraints>
+                                <string key="text">1
 2
 3</string>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                    </textView>
-                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="OJ1-WL-7rq">
-                        <rect key="frame" x="16" y="173" width="288" height="52"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qUJ-uA-W4N" customClass="VerticalButton" customModule="WooCommerce" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="89.5" height="52"/>
-                                <color key="backgroundColor" red="0.55453354119999998" green="0.35826593639999998" blue="0.52943503859999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
-                                <state key="normal" title="Spam">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="spamWasPressed:" destination="ba1-rz-4HV" eventType="touchUpInside" id="QoL-XB-ViB"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6As-Iw-caM" customClass="VerticalButton" customModule="WooCommerce" customModuleProvider="target">
-                                <rect key="frame" x="99.5" y="0.0" width="89" height="52"/>
-                                <color key="backgroundColor" red="0.55453354119999998" green="0.35826593639999998" blue="0.52943503859999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
-                                <state key="normal" title="Trash">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="trashWasPressed:" destination="ba1-rz-4HV" eventType="touchUpInside" id="wjG-4g-18i"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uc0-Kk-Npt" customClass="VerticalButton" customModule="WooCommerce" customModuleProvider="target">
-                                <rect key="frame" x="198.5" y="0.0" width="89.5" height="52"/>
-                                <color key="backgroundColor" red="0.55453354119999998" green="0.35826593639999998" blue="0.52943503859999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
-                                <state key="normal" title="Approve">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="approveWasPressed:" destination="ba1-rz-4HV" eventType="touchUpInside" id="XrG-F9-l5a"/>
-                                </connections>
-                            </button>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="OJ1-WL-7rq">
+                                <rect key="frame" x="0.0" y="104" width="288" height="52"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qUJ-uA-W4N" customClass="VerticalButton" customModule="WooCommerce" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="89.5" height="52"/>
+                                        <color key="backgroundColor" red="0.55453354119999998" green="0.35826593639999998" blue="0.52943503859999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                        <state key="normal" title="Spam">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="spamWasPressed:" destination="ba1-rz-4HV" eventType="touchUpInside" id="QoL-XB-ViB"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6As-Iw-caM" customClass="VerticalButton" customModule="WooCommerce" customModuleProvider="target">
+                                        <rect key="frame" x="99.5" y="0.0" width="89" height="52"/>
+                                        <color key="backgroundColor" red="0.55453354119999998" green="0.35826593639999998" blue="0.52943503859999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                        <state key="normal" title="Trash">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="trashWasPressed:" destination="ba1-rz-4HV" eventType="touchUpInside" id="wjG-4g-18i"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uc0-Kk-Npt" customClass="VerticalButton" customModule="WooCommerce" customModuleProvider="target">
+                                        <rect key="frame" x="198.5" y="0.0" width="89.5" height="52"/>
+                                        <color key="backgroundColor" red="0.55453354119999998" green="0.35826593639999998" blue="0.52943503859999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                        <state key="normal" title="Approve">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="approveWasPressed:" destination="ba1-rz-4HV" eventType="touchUpInside" id="XrG-F9-l5a"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="gD3-cL-zcL"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="52" id="gD3-cL-zcL"/>
-                        </constraints>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </stackView>
                 </subviews>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="6d4-9R-dcK" firstAttribute="top" secondItem="MB2-nk-Fuo" secondAttribute="bottom" id="4dz-UQ-k5m"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="eLm-pe-Z50" secondAttribute="trailing" id="4pc-RJ-OF1"/>
                     <constraint firstItem="6d4-9R-dcK" firstAttribute="leading" secondItem="MB2-nk-Fuo" secondAttribute="leading" id="JF4-5d-pEd"/>
-                    <constraint firstItem="FpQ-yp-a6e" firstAttribute="trailing" secondItem="p0w-Eh-NgH" secondAttribute="trailingMargin" id="JI0-17-7m1"/>
                     <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="MB2-nk-Fuo" secondAttribute="trailing" id="KXj-dp-lei"/>
                     <constraint firstItem="qcp-iw-3SL" firstAttribute="top" secondItem="p0w-Eh-NgH" secondAttribute="topMargin" constant="11" id="LZ5-7b-YMV"/>
-                    <constraint firstItem="OJ1-WL-7rq" firstAttribute="top" secondItem="FpQ-yp-a6e" secondAttribute="bottom" constant="22" id="UTs-o7-auZ"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="OJ1-WL-7rq" secondAttribute="trailing" id="UrQ-uZ-qKR"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="OJ1-WL-7rq" secondAttribute="bottom" constant="8" id="bIt-1I-EsU"/>
-                    <constraint firstItem="OJ1-WL-7rq" firstAttribute="leading" secondItem="p0w-Eh-NgH" secondAttribute="leadingMargin" id="f2c-ay-unu"/>
+                    <constraint firstItem="eLm-pe-Z50" firstAttribute="top" secondItem="6d4-9R-dcK" secondAttribute="bottom" constant="14" id="bpH-U6-QD2"/>
                     <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="6d4-9R-dcK" secondAttribute="trailing" id="fwX-Vq-3Sf"/>
-                    <constraint firstItem="FpQ-yp-a6e" firstAttribute="leading" secondItem="p0w-Eh-NgH" secondAttribute="leadingMargin" id="iJQ-Re-Ht8"/>
+                    <constraint firstItem="eLm-pe-Z50" firstAttribute="leading" secondItem="p0w-Eh-NgH" secondAttribute="leadingMargin" id="hlX-oS-Iev"/>
                     <constraint firstItem="MB2-nk-Fuo" firstAttribute="leading" secondItem="qcp-iw-3SL" secondAttribute="trailing" constant="16" id="j02-8v-a9S"/>
                     <constraint firstItem="MB2-nk-Fuo" firstAttribute="top" secondItem="qcp-iw-3SL" secondAttribute="top" id="kYZ-Gx-lHX"/>
-                    <constraint firstItem="FpQ-yp-a6e" firstAttribute="top" secondItem="6d4-9R-dcK" secondAttribute="bottom" constant="14" id="whu-f4-xTS"/>
                     <constraint firstItem="qcp-iw-3SL" firstAttribute="leading" secondItem="p0w-Eh-NgH" secondAttribute="leadingMargin" id="xLw-6R-ASC"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="approvalButton" destination="uc0-Kk-Npt" id="tZL-iM-Q2H"/>
                 <outlet property="detailsLabel" destination="6d4-9R-dcK" id="pCn-M7-He8"/>
                 <outlet property="gravatarImageView" destination="qcp-iw-3SL" id="e8j-K5-3V4"/>
                 <outlet property="spamButton" destination="qUJ-uA-W4N" id="Gbe-6K-KhN"/>
+                <outlet property="starViewContainer" destination="1Iy-55-tos" id="4bq-hc-Gxe"/>
                 <outlet property="textView" destination="FpQ-yp-a6e" id="qCC-ZC-o7p"/>
                 <outlet property="titleLabel" destination="MB2-nk-Fuo" id="Rem-KB-lV9"/>
                 <outlet property="trashButton" destination="6As-Iw-caM" id="x3j-WQ-47t"/>
