--- a/WooCommerce/Classes/ViewRelated/Notifications/Cells/NoteDetailsCommentTableViewCell.xib
+++ b/WooCommerce/Classes/ViewRelated/Notifications/Cells/NoteDetailsCommentTableViewCell.xib
@@ -18,53 +18,63 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="243.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="qcp-iw-3SL" customClass="CircularImageView" customModule="WooCommerce" customModuleProvider="target">
-                        <rect key="frame" x="16" y="22" width="40" height="40"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="37" id="Da7-XZ-kzz"/>
-                            <constraint firstAttribute="width" constant="37" id="Qrb-Xl-Ymo"/>
-                            <constraint firstAttribute="height" constant="40" id="kY5-OW-EHJ"/>
-                            <constraint firstAttribute="width" constant="40" id="kyz-pf-ord"/>
-                        </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="Da7-XZ-kzz"/>
-                                <exclude reference="Qrb-Xl-Ymo"/>
-                            </mask>
-                        </variation>
-                        <variation key="heightClass=regular-widthClass=regular">
-                            <mask key="constraints">
-                                <include reference="Da7-XZ-kzz"/>
-                                <include reference="Qrb-Xl-Ymo"/>
-                                <exclude reference="kY5-OW-EHJ"/>
-                                <exclude reference="kyz-pf-ord"/>
-                            </mask>
-                        </variation>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" horizontalCompressionResistancePriority="250" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MB2-nk-Fuo">
-                        <rect key="frame" x="72" y="22" width="35.5" height="20.5"/>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="749" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6d4-9R-dcK">
-                        <rect key="frame" x="72" y="42.5" width="47" height="16"/>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="eLm-pe-Z50">
-                        <rect key="frame" x="16" y="72.5" width="288" height="156"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="QbZ-zr-lT5">
+                        <rect key="frame" x="20" y="11" width="284" height="222"/>
                         <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="x22-fd-jyE">
+                                <rect key="frame" x="0.0" y="0.0" width="284" height="40"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="qcp-iw-3SL" customClass="CircularImageView" customModule="WooCommerce" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="37" id="Da7-XZ-kzz"/>
+                                            <constraint firstAttribute="width" constant="37" id="Qrb-Xl-Ymo"/>
+                                            <constraint firstAttribute="height" constant="40" id="kY5-OW-EHJ"/>
+                                            <constraint firstAttribute="width" constant="40" id="kyz-pf-ord"/>
+                                        </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="Da7-XZ-kzz"/>
+                                                <exclude reference="Qrb-Xl-Ymo"/>
+                                            </mask>
+                                        </variation>
+                                        <variation key="heightClass=regular-widthClass=regular">
+                                            <mask key="constraints">
+                                                <include reference="Da7-XZ-kzz"/>
+                                                <include reference="Qrb-Xl-Ymo"/>
+                                                <exclude reference="kY5-OW-EHJ"/>
+                                                <exclude reference="kyz-pf-ord"/>
+                                            </mask>
+                                        </variation>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="CXQ-2a-6Fp">
+                                        <rect key="frame" x="56" y="0.0" width="228" height="40"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="249" horizontalCompressionResistancePriority="250" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MB2-nk-Fuo">
+                                                <rect key="frame" x="0.0" y="0.0" width="228" height="24"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" horizontalCompressionResistancePriority="250" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6d4-9R-dcK">
+                                                <rect key="frame" x="0.0" y="24" width="228" height="16"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Iy-55-tos">
-                                <rect key="frame" x="0.0" y="0.0" width="288" height="18"/>
+                                <rect key="frame" x="0.0" y="42" width="284" height="20"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="18" id="qAn-B5-boc"/>
+                                    <constraint firstAttribute="height" constant="20" id="qAn-B5-boc"/>
                                 </constraints>
                             </view>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" editable="NO" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FpQ-yp-a6e">
-                                <rect key="frame" x="0.0" y="20" width="288" height="82"/>
+                                <rect key="frame" x="0.0" y="64" width="284" height="104"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="28" id="mhf-tZ-eCY"/>
@@ -76,10 +86,10 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="OJ1-WL-7rq">
-                                <rect key="frame" x="0.0" y="104" width="288" height="52"/>
+                                <rect key="frame" x="0.0" y="170" width="284" height="52"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qUJ-uA-W4N" customClass="VerticalButton" customModule="WooCommerce" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="89.5" height="52"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="88" height="52"/>
                                         <color key="backgroundColor" red="0.55453354119999998" green="0.35826593639999998" blue="0.52943503859999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                         <state key="normal" title="Spam">
@@ -90,7 +100,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6As-Iw-caM" customClass="VerticalButton" customModule="WooCommerce" customModuleProvider="target">
-                                        <rect key="frame" x="99.5" y="0.0" width="89" height="52"/>
+                                        <rect key="frame" x="98" y="0.0" width="88" height="52"/>
                                         <color key="backgroundColor" red="0.55453354119999998" green="0.35826593639999998" blue="0.52943503859999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                         <state key="normal" title="Trash">
@@ -101,7 +111,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uc0-Kk-Npt" customClass="VerticalButton" customModule="WooCommerce" customModuleProvider="target">
-                                        <rect key="frame" x="198.5" y="0.0" width="89.5" height="52"/>
+                                        <rect key="frame" x="196" y="0.0" width="88" height="52"/>
                                         <color key="backgroundColor" red="0.55453354119999998" green="0.35826593639999998" blue="0.52943503859999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                         <state key="normal" title="Approve">
@@ -117,22 +127,14 @@
                                 </constraints>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </stackView>
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="6d4-9R-dcK" firstAttribute="top" secondItem="MB2-nk-Fuo" secondAttribute="bottom" id="4dz-UQ-k5m"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="eLm-pe-Z50" secondAttribute="trailing" id="4pc-RJ-OF1"/>
-                    <constraint firstItem="6d4-9R-dcK" firstAttribute="leading" secondItem="MB2-nk-Fuo" secondAttribute="leading" id="JF4-5d-pEd"/>
-                    <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="MB2-nk-Fuo" secondAttribute="trailing" id="KXj-dp-lei"/>
-                    <constraint firstItem="qcp-iw-3SL" firstAttribute="top" secondItem="p0w-Eh-NgH" secondAttribute="topMargin" constant="11" id="LZ5-7b-YMV"/>
-                    <constraint firstItem="eLm-pe-Z50" firstAttribute="top" secondItem="6d4-9R-dcK" secondAttribute="bottom" constant="14" id="bpH-U6-QD2"/>
-                    <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="6d4-9R-dcK" secondAttribute="trailing" id="fwX-Vq-3Sf"/>
-                    <constraint firstItem="eLm-pe-Z50" firstAttribute="leading" secondItem="p0w-Eh-NgH" secondAttribute="leadingMargin" id="hlX-oS-Iev"/>
-                    <constraint firstItem="MB2-nk-Fuo" firstAttribute="leading" secondItem="qcp-iw-3SL" secondAttribute="trailing" constant="16" id="j02-8v-a9S"/>
-                    <constraint firstItem="MB2-nk-Fuo" firstAttribute="top" secondItem="qcp-iw-3SL" secondAttribute="top" id="kYZ-Gx-lHX"/>
-                    <constraint firstItem="qcp-iw-3SL" firstAttribute="leading" secondItem="p0w-Eh-NgH" secondAttribute="leadingMargin" id="xLw-6R-ASC"/>
+                    <constraint firstItem="QbZ-zr-lT5" firstAttribute="top" secondItem="p0w-Eh-NgH" secondAttribute="topMargin" id="Rl1-g8-YkH"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="QbZ-zr-lT5" secondAttribute="bottom" id="Vfz-Zj-1v5"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="QbZ-zr-lT5" secondAttribute="trailing" id="lYP-FG-ARa"/>
+                    <constraint firstItem="QbZ-zr-lT5" firstAttribute="leading" secondItem="p0w-Eh-NgH" secondAttribute="leading" constant="20" symbolic="YES" id="nVZ-Fb-Nbv"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
