--- a/WooCommerce/Classes/ViewRelated/Notifications/Cells/NoteDetailsCommentTableViewCell.xib
+++ b/WooCommerce/Classes/ViewRelated/Notifications/Cells/NoteDetailsCommentTableViewCell.xib
@@ -73,7 +73,7 @@
                                     <constraint firstAttribute="height" constant="10" id="qsU-jb-cDi"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Iy-55-tos">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Iy-55-tos" customClass="RatingView" customModule="WooCommerce" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="54" width="284" height="18"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -150,7 +150,7 @@
                 <outlet property="detailsLabel" destination="6d4-9R-dcK" id="pCn-M7-He8"/>
                 <outlet property="gravatarImageView" destination="qcp-iw-3SL" id="e8j-K5-3V4"/>
                 <outlet property="spamButton" destination="qUJ-uA-W4N" id="Gbe-6K-KhN"/>
-                <outlet property="starViewContainer" destination="1Iy-55-tos" id="4bq-hc-Gxe"/>
+                <outlet property="starRatingView" destination="1Iy-55-tos" id="bcq-5i-2Gp"/>
                 <outlet property="textView" destination="FpQ-yp-a6e" id="qCC-ZC-o7p"/>
                 <outlet property="titleLabel" destination="MB2-nk-Fuo" id="Rem-KB-lV9"/>
                 <outlet property="trashButton" destination="6As-Iw-caM" id="x3j-WQ-47t"/>
