NoteDetailsCommentTableViewCell: Adding space between text and buttons

--- a/WooCommerce/Classes/ViewRelated/Notifications/Cells/NoteDetailsCommentTableViewCell.xib
+++ b/WooCommerce/Classes/ViewRelated/Notifications/Cells/NoteDetailsCommentTableViewCell.xib
@@ -81,7 +81,7 @@
                                 </constraints>
                             </view>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" editable="NO" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FpQ-yp-a6e">
-                                <rect key="frame" x="0.0" y="74" width="284" height="94"/>
+                                <rect key="frame" x="0.0" y="74" width="284" height="77"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="28" id="mhf-tZ-eCY"/>
@@ -92,6 +92,13 @@
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vhZ-1A-FVO">
+                                <rect key="frame" x="0.0" y="153" width="284" height="15"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="15" id="k78-0j-dtf"/>
+                                </constraints>
+                            </view>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="OJ1-WL-7rq">
                                 <rect key="frame" x="0.0" y="170" width="284" height="52"/>
                                 <subviews>
